@@ -1,5 +1,6 @@
 2010-08-29  Steffen Kamper  <steffen@typo3.org>
 
+	* Fixed bug #15525: Caching framework database backend does not free mysql resource in collectGarbage() (Thanks to Helmut Hummel)
 	* Fixed bug #15258: Creating multiple pages doesn't consider the group permissions for all pages (Thanks to Lorenz Ulrich)
 
 2010-08-29  Steffen Gebert  <steffen@steffen-gebert.de>
